# discord-bot

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml  semantic-release.yml
src/: bot.py  odoo.py
