[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = "Discord bot for managing users"
authors = ["Gian Klug <gian.klug@ict-scouts.ch>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
py-cord = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
